--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,29 @@ body {
 	left: 0;
 	top: 0;
 }
+
+#scoreboard {
+	position: absolute;
+	left: 25%;
+	right: 25%;
+	top: 10px;
+	height: 50px;
+
+	background: darkgray;
+	border-radius: 10px;
+}
+
+#scoreboard > div {
+	position: absolute;
+	top: 7px;
+	bottom: 7px;
+	left: 7px;
+	right: 7px;
+
+	background: white;
+}
+	
+
 .cell-controls {
 	position: absolute;
 	top: 200;
