Revert "Funky in-line dimension specifications for local game" and make way for a universal game-choice screen with 'host' and 'local' options.
This reverts commit 94a558974973e7bdec4c823b84848a6a4b73a769.

--- a/public/style.css
+++ b/public/style.css
@@ -108,39 +108,19 @@ body {
 	width: calc(100% - 40px); 
 }
 
-.menu > input , .menu > label{
+.menu > input {
 	font-size: 25px;
 	width: 100%;
 	margin: 10px;
 	margin-left: 0px;
 }
-.menu > label {
-	display: block;
-	width: calc(100% - 10px);
-  	padding: 4px;
-  	/*border-top: 1px solid #CCCCCC;*/
-  	border-right: 1px solid #333333;
-  	border-bottom: 4px solid #333333;
-  	/*border-left: 1px solid #CCCCCC;*/
-}
 
-.menu > input[type="button"] , .menu > label {
+.menu > input[type="button"] {
 	background: blueviolet;
 	border-radius: 5px;
 	color: white;
 	border-color: blueviolet;
 }
-
-.menu > label > center > input {
-	width: 20px;
-
-	position: relative;
-	top: 50%;
-	left: 0%;
-	margin-left: -10px;
-	margin-top: -15px;
-}
-	
 
 #userlabel {
 	display: none;
